begins work for retrieving links from server

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,8 @@
-<html>
+<html ng-app='Shortly'>
 <head>
   <title>Shortly</title>
-  <script src="/client/app.js"></script>
   <script src="/lib/angular.min.js"></script>
+  <script src="/client/app.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
