Can successfully post sites to Sinatra

--- a/public/templates/links.html
+++ b/public/templates/links.html
@@ -1,3 +1,4 @@
+<div ng-controller="LinksCtrl">
 <ul> 
   <li class="link" ng-repeat="link in links">
     <img src="/redirect_icon.png"/>
@@ -34,3 +35,4 @@
     </div> -->
   </li>
 </ul>
+</div>
