--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,9 @@
 <h1>Shortly</h1> 
 <div class="navigation"> 
 <ul> 
-  <li><a href="#" class="index">All Links</a></li> 
-  <li><a href="#" class="create">Shorten</a></li> 
+  <li><a ng-href="#" class="index">All Links</a></li> 
+  <li><a ng-href="#/create" class="create">Shorten</a></li> 
 </ul> 
 </div> 
-<div ng-view>
-  <div id="container" ng-controller="LinksCtrl">
-  </div>
+<div id="container" ng-view>
 </div>
