--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -4,5 +4,28 @@
 	    <input ng-click="post()" type="submit" value="Shorten"> 
 	  </form> 
 	  <img class="spinner" src="/spiffygif_46x46.gif"> 
-	<div class="message"></div>
+	<div class="message">
+    <ul> 
+      <li class="link" ng-repeat="link in links">
+        <img src="/redirect_icon.png"/>
+        <div class="info">
+          <div class="visits">
+            <span class="count">{{ link.visits }}</span>Visits
+          </div>
+          <div class="title">
+            {{ link.title }}
+            <!-- <a href="#" class="show-stats"> (show stats)</a> -->
+          </div>
+          <div class="original">{{ link.url }}</div>
+          <a href="{{ base_url }}/{{ code }}">{{ link.base_url }}/{{ link.code }}
+          </a>
+          <div class="last-visited">
+            <!-- FIXME: server needs to reflect link.updated_at using touch -->
+            <span class="visited">Last visited: {{ link.last_visited }}
+            </span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
