--- a/public/templates/links.html
+++ b/public/templates/links.html
@@ -1,10 +1,11 @@
 <div ng-controller="LinksCtrl">
   <div class="sortBar">
-      <a href="" ng-click="predicate='visits'" class="sort-visits">Num Visits</a>
-      <a href="" ng-click="predicate='last_visited'" class="sort-last-visit">Time Last Visited</a>
+      <a href="" ng-click="predicate='visits'" class="sort-by">Num Visits</a>
+      <a href="" ng-click="predicate='last_visited'" class="sort-by">Time Last Visited</a>
+      <input type="text" placeholder="Search for site" ng-model="searchBox" />
   </div>
 <ul> 
-  <li class="link" ng-repeat="link in links | orderBy:predicate:reverse">
+  <li class="link" ng-repeat="link in links | orderBy:predicate:reverse | filter:searchBox">
     <img src="/redirect_icon.png"/>
     <div class="info">
       <div class="visits">
