--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,12 @@ h1 {
   margin-bottom: 10px;
 }
 
+input.text:focus:required:invalid, textarea:focus:required:invalid, select:focus:required:invalid {
+  border-color: #e9322d;
+  color: #b94a48;
+  outline: 0;
+}
+
 .navigation {
   width: 100%;
   height: 40px;
